gac_sb/objects/AppCIRchecklistItem__c.object
<CustomObject>
    <description>APPLICATION CIR - Les items des checklists d&apos;aide au remplissage</description>
    <fields>
        <fullName>ChecklistSection__c</fullName>
        <label>Section de Checklist</label>
        <referenceTo>AppCIRchecklistSection__c</referenceTo>
        <relationshipName>ChecklistItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Nom__c</fullName>
        <label>Nom</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordre__c</fullName>
        <label>Ordre</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>[OLD] Element de Checklist</label>
    <nameField>
        <displayFormat>ChecklistItem-{000000}</displayFormat>
        <label>Nom d’élément de Checklist</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Elements de Checklist</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>